Names and info about pets

--- a/blue_bicolor_ragdoll.html
+++ b/blue_bicolor_ragdoll.html
@@ -10,8 +10,9 @@
                 <img src="images/blue_bicolor_ragdoll_cat.jpg" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Cat</h3>
-                <h4>Breed: Blue Bicolor Ragdoll</h4>
+                <h3>Name: Oliver</h3>
+                <p>Type: Cat</p>
+                <p>Breed: Ragdoll</p>
                 <p><strong>Sex:</strong> Male</p>
                 <p><strong>Color:</strong> Blue Bicolor</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
