--- a/border_collie.html
+++ b/border_collie.html
@@ -10,8 +10,9 @@
                 <img src="images/border_collie_black_and_white_dog.jpg" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Dog</h3>
-                <h4>Breed: Border Collie</h4>
+                <h3>Name: Charlie</h3>
+                <p>Type: Dog</p>
+                <p>Breed: Border Collie</p>
                 <p><strong>Sex:</strong> Male</p>
                 <p><strong>Color:</strong> Black and White</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
