--- a/brown_tabby.html
+++ b/brown_tabby.html
@@ -10,8 +10,9 @@
                 <img src="images/maine-coon-cat-brown-tabby-head-golden-long-dense-lynx-tips-his-ears-typical-shaggy-coat-long-ruff-head-67209819.webp" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Cat</h3>
-                <h4>Breed: Maine Coon Brown Tabby</h4>
+                <h3>Name: Mocha</h3>
+                <p>Type: Cat</p>
+                <p>Breed: Maine</p>
                 <p><strong>Sex:</strong> Female</p>
                 <p><strong>Color:</strong> Brown Tabby</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
