--- a/french_bulldog.html
+++ b/french_bulldog.html
@@ -10,8 +10,9 @@
                 <img src="images/French_bulldog_fawn.jpg" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Dog</h3>
-                <h4>Breed: French Bulldog Fawn</h4>
+                <h3>Name: Daisy</h3>
+                <p>Type: Dog</p>
+                <p>Breed: French Bulldog</p>
                 <p><strong>Sex:</strong> Female</p>
                 <p><strong>Color:</strong> Fawn</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
