--- a/labrador.html
+++ b/labrador.html
@@ -10,8 +10,9 @@
                 <img src="images/yellow-labrador-retriever-on-green-grass-lawn.jpg" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Dog</h3>
-                <h4>Breed: Yellow Labrador Retriever</h4>
+                <h3>Name: Max</h3>
+                <p>Type: Dog</p>
+                <p>Breed: Labrador Retriever</p>
                 <p><strong>Sex:</strong> Male</p>
                 <p><strong>Color:</strong> Yellow</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
