--- a/main.html
+++ b/main.html
@@ -19,14 +19,12 @@
                 <td colspan="1"><div class="card" style="background-color: red;">
                     <img src="images/yellow-labrador-retriever-on-green-grass-lawn.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Max</h2>
                         <div class="card-text">
-                            <p></strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
-                            <p><strong>Age:</strong> 4 Years</p>
+                            <p><strong>Breed:</strong> Labrador Retriever</p>
+                            <p><strong>Sex:</strong> Male</p>
+                            <p><strong>Color:</strong> Yellow</p>
+                            <p><strong>Age:</strong> 3 Years</p>
                             <a href="labrador.html" class="btn btn-primary">More info</a>
                         </div>
                     </div>
@@ -34,13 +32,11 @@
                   <td colspan="1"><div class="card" style="background-color: blue;">
                     <img src="images/maine-coon-cat-brown-tabby-head-golden-long-dense-lynx-tips-his-ears-typical-shaggy-coat-long-ruff-head-67209819.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Mocha</h2>
                         <div class="card-text">
-                            <p> <strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
+                            <p><strong>Breed:</strong> Miane</p>
+                            <p><strong>Sex:</strong> Female</p>
+                            <p><strong>Color:</strong> Brown Tabby</p>
                             <p><strong>Age:</strong> 4 Years</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo commodi enim veniam esse, harum eveniet unde, vero sequi culpa labore debitis minima at exercitationem placeat magni beatae voluptatum nostrum ex.</p>
                             <a href="brown_tabby.html" class="btn btn-primary">More info</a>
@@ -50,14 +46,12 @@
                   <td colspan="1"><div class="card">
                     <img src="images/French_bulldog_fawn.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Daisy</h2>
                         <div class="card-text">
-                            <p> <strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
-                            <p><strong>Age:</strong> 4 Years</p>
+                            <p><strong>Breed:</strong> French Bulldog</p>
+                            <p><strong>Sex:</strong> Female</p>
+                            <p><strong>Color:</strong> Fawn</p>
+                            <p><strong>Age:</strong> 2 Years</p>
                             <a href="french_bulldog.html" class="btn btn-primary">More info</a>
                         </div>
                     </div>
@@ -67,14 +61,12 @@
                 <td colspan="1"><div class="card">
                     <img src="images/blue_bicolor_ragdoll_cat.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Oliver</h2>
                         <div class="card-text">
-                            <p> <strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
-                            <p><strong>Age:</strong> 4 Years</p>
+                            <p><strong>Breed:</strong> Ragdoll</p>
+                            <p><strong>Sex:</strong> Male</p>
+                            <p><strong>Color:</strong> Blue Bicolor</p>
+                            <p><strong>Age:</strong> 5 Years</p>
                             <a href="blue_bicolor_ragdoll.html" class="btn btn-primary">More info</a>
                         </div>
                     </div>
@@ -82,13 +74,10 @@
                   <td colspan="1"><div class="card">
                     <img src="images/border_collie_black_and_white_dog.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Charlie</h2>
                         <div class="card-text">
-                            <p> <strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
+                            <p><strong>Breed:</strong> Border Collie</p>
+                            <p><strong>Sex:</strong> Male</p>
                             <p><strong>Age:</strong> 4 Years</p>
                             <a href="border_collie.html" class="btn btn-primary">More info</a>
                         </div>
@@ -97,14 +86,11 @@
                   <td colspan="1"><div class="card">
                     <img src="images/seal_point_siamese_cat.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h2 class="card-title">Name</h2>
+                        <h2 class="card-title">Whiskers</h2>
                         <div class="card-text">
-                            <p> <strong>Type:</strong> Filler</p>
-                            <p><strong>Breed:</strong> Filler</p>
-                            <p><strong>Sex:</strong> Filler</p>
-                            <p><strong>Color:</strong> Filler</p>
-                            <p><strong>Spayed / Neutered:</strong> Yes</p>
-                            <p><strong>Age:</strong> 4 Years</p>
+                            <p><strong>Breed:</strong> Siamese</p>
+                            <p><strong>Sex:</strong> Female</p>
+                            <p><strong>Age:</strong> 3 Years</p>
                             <a href="siamese.html" class="btn btn-primary">More info</a>
                         </div>
                     </div>
