--- a/siamese.html
+++ b/siamese.html
@@ -10,8 +10,9 @@
                 <img src="images/seal_point_siamese_cat.jpg" alt="..." style="width: 49%;">
               </div>
               <div class="col">
-                <h3>Type: Cat</h3>
-                <h4>Breed: Siamese</h4>
+                <h3>Name: Whiskers</h3>
+                <p>Type: Cat</h3>
+                <p>Breed: Siamese</p>
                 <p><strong>Sex:</strong> Female</p>
                 <p><strong>Color:</strong> Seal Point</p>
                 <p><strong>Spayed / Neutered:</strong> Yes</p>
