--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
             </thead>
             <tbody>  
                 <tr>
-                <td colspan="1"><div class="card" style="background-color: red;">
+                <td colspan="1"><div class="card" style="background-color: lightblue;">
                     <img src="images/yellow-labrador-retriever-on-green-grass-lawn.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Max</h2>
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                   </div></td>
-                  <td colspan="1"><div class="card" style="background-color: blue;">
+                  <td colspan="1"><div class="card" style="background-color: pink;">
                     <img src="images/maine-coon-cat-brown-tabby-head-golden-long-dense-lynx-tips-his-ears-typical-shaggy-coat-long-ruff-head-67209819.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Mocha</h2>
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                   </div></td>
-                  <td colspan="1"><div class="card">
+                  <td colspan="1"><div class="card" style="background-color: pink;">
                     <img src="images/French_bulldog_fawn.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Daisy</h2>
@@ -64,7 +64,7 @@
                   </div></td>
                 </tr>
               <tr>
-                <td colspan="1"><div class="card">
+                <td colspan="1"><div class="card" style="background-color: lightblue;">
                     <img src="images/blue_bicolor_ragdoll_cat.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Oliver</h2>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                   </div></td>
-                  <td colspan="1"><div class="card">
+                  <td colspan="1"><div class="card" style="background-color: lightblue;">
                     <img src="images/border_collie_black_and_white_dog.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Charlie</h2>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                   </div></td>
-                  <td colspan="1"><div class="card">
+                  <td colspan="1"><div class="card" style="background-color: pink;">
                     <img src="images/seal_point_siamese_cat.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h2 class="card-title">Whiskers</h2>
