--- a/index.html
+++ b/index.html
@@ -104,5 +104,7 @@
                 </tr>
             </tbody>
           </table>
+
+          <script src="petManagment.js"></script>
     </body>
 </html>
